changed margin/share rollout now visible, icons roll upwards onto actual media not offscreen/ position based on viewport % rather than fixed pixels

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -396,51 +396,51 @@ ul li:nth-child(10) a
 }
 ul:hover li:nth-child(1) a
 {
-    transform: translateY(64px) rotate(720deg);
+    transform: translateY(-64px) rotate(720deg);
     transition: 1.1s;
 }
 ul:hover li:nth-child(2) a
 {
-    transform: translateY(128px) rotate(720deg);
+    transform: translateY(-128px) rotate(720deg);
     transition: 1.2s;
 }
 ul:hover li:nth-child(3) a
 {
-    transform: translateY(192px) rotate(720deg);
+    transform: translateY(-192px) rotate(720deg);
     transition: 1.3s;
 }
 ul:hover li:nth-child(4) a
 {
-    transform: translateY(256px) rotate(720deg);
+    transform: translateY(-256px) rotate(720deg);
     transition: 1.4s;
 }
 ul:hover li:nth-child(5) a
 {
-    transform: translateY(320px) rotate(720deg);
+    transform: translateY(-320px) rotate(720deg);
     transition: 1.5s;
 }
 ul:hover li:nth-child(6) a
 {
-    transform: translateY(384px) rotate(720deg);
+    transform: translateY(-384px) rotate(720deg);
     transition: 1.6s;
 }
 ul:hover li:nth-child(7) a
 {
-    transform: translateY(448px) rotate(720deg);
+    transform: translateY(-448px) rotate(720deg);
     transition: 1.7s;
 }
 ul:hover li:nth-child(8) a
 {
-    transform: translateY(512px) rotate(720deg);
+    transform: translateY(-512px) rotate(720deg);
     transition: 1.8s;
 }
 ul:hover li:nth-child(9) a
 {
-    transform: translateY(576px) rotate(720deg);
+    transform: translateY(-576px) rotate(720deg);
     transition: 1.9s;
 }
 ul:hover li:nth-child(10) a
 {
-    transform: translateY(640px) rotate(720deg);
+    transform: translateY(-640px) rotate(720deg);
     transition: 2.1s;
 }
